Feature/api improvements (#2)
* EcsViews are now records.
Removed copy() method from Component.

* getOrder now defaults to 0.
Improved World search api methods.
Improved World createEntity api methods.

* updated some javadocs

* added EcsView6 and updated Javadocs

* Added EcsViewFactory function for EcsView6.
Improved SolaEcs#getSystem

* More javadoc updates

* More javadoc updates.
Added new constructor to SolaEcs to initialize it with a World and some systems.

* More javadoc updates.

* Slight coverage improvement

* updated javadocs

* Improved unit test coverage

* Updated to Java 18